# techconnect-classes-api

./: .gitignore  LICENSE  requirements.txt
backend/: .dockerignore  .env.dev  .env.example  .env.test  .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
backend/resources/: active_classes_250710.csv
backend/scripts/: initdb.py
backend/scripts/core/: create_tables.py  data_transformations.py  drop_tables.py  init_database.py  seeding.py
backend/techconnect_classes/: main.py
backend/techconnect_classes/api/: __init__.py
backend/techconnect_classes/core/: config.py  log.py
backend/techconnect_classes/database/: __init__.py  base_class.py  db.py
backend/techconnect_classes/models/: __init__.py  additional_material.py  course.py  format.py  handout.py  language.py  level.py  prerequisite.py  series.py  user.py
backend/techconnect_classes_api/: main.py  server.py
backend/techconnect_classes_api/api/: __init__.py  dependencies.py
backend/techconnect_classes_api/core/: config.py  exceptions.py  log.py  security.py
backend/techconnect_classes_api/crud/: base.py  course.py  user.py
backend/techconnect_classes_api/database/: __init__.py  db.py  session.py  utils.py
backend/techconnect_classes_api/models/: __init__.py  additional_material.py  course.py  format.py  handout.py  language.py  level.py  prerequisite.py  series.py  user.py
backend/techconnect_classes_api/schemas/: auth.py  course.py  user.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py
backend/tests/unit/: conftest.py  test_config.py  (+2 more)
(+6 files in other folders)
